kubernetes/darkmore/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
spec:
  selector:
    app: attic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: attic
