kubernetes/darkmore/attic/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attic
spec:
  parentRefs:
  - name: gateway-tailscale
    namespace: kgateway-system
  hostnames:
    - attic.infrastructure.ramona.fun
  rules:
    - backendRefs:
      - name: attic
        kind: Service
        port: 80
      timeouts:
        backendRequest: "1800s"
        request: "1800s"
